# contours

./: .gitignore  CMakeLists.txt
cpp/: CMakeLists.txt  dlines.mex.cpp
cpp/curvature/: curvature.hpp
matlab/: CMakeLists.txt  GetDist2.m  M_to_contour_list.m  calc_entropy.m  calc_saliency.m  contour_demo.m  contour_from_M.m  contour_list_to_M.m  detect_and_save_contours.m  detect_and_save_countours_dir.m  detect_and_save_countours_dirs.m  detect_contours_on_hpatches.m  detect_contours_on_pyramid.m  discriminative_scale_desc_crafted_checkpoint_5_14.pth  dlines.mexa64  dlines_init.m  do_stuff.m  draw_contour_csponds.m  extract_and_save_patches.m  extract_and_save_patches_dir.m  extract_and_save_patches_dirs.m  extract_descriptors_from_hpathes_cont.py  extract_patches_from_contours.m  extract_sifts_with_fixed_scale.py  fsdemo.m  get_repeatability_from_one_dir.m  hpatches_dollar_rep_IoU_th_0.3.mat  hpatches_dollar_rep_IoU_th_0.5.mat  hpatches_dollar_rep_IoU_th_learned_fixed_scale0.3.mat  hpatches_dollar_rep_IoU_th_learned_learned_scale0.3.mat  hpatches_dollar_rep_IoU_th_sift_ave0.3.mat  hpatches_dollar_rep_IoU_th_sift_max0.3.mat  line_fit_demo.m  make_par_curves.m  make_patch.m  make_scale_space.m  match_contours.m  match_demo.m  msdemo.m  patch_demo.m  (+14 more)
matlab/+DL/: checkers.m  contour_demo.m  distortion_demo.m  dlines_init.m  edgelink.m  extract_contours.m  radialdistort.m  segment_contours.m  simple_solver.m  solver_npoint_rad_dist.m
matlab/+TDV/: dddemo.m  demo.m  embed.m  extract.m  get_dataset.sh  match.m  process_all_datasets.m  show_matches.m  tdv.m
